--- a/swift fun/Base.lproj/Main.storyboard
+++ b/swift fun/Base.lproj/Main.storyboard
@@ -31,17 +31,44 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zyy-Te-jVX">
-                                <rect key="frame" x="178" y="384" width="18" height="21"/>
+                                <rect key="frame" x="178.5" y="384" width="18" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nFY-bo-qh6">
+                                <rect key="frame" x="137.5" y="270" width="100" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="fl9-14-1bd"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="QDm-xD-5N3">
+                                <rect key="frame" x="137.5" y="223" width="100" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="8z1-J4-yrQ"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7KA-KF-lJ5">
+                                <rect key="frame" x="163" y="170" width="51" height="31"/>
+                            </switch>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="nFY-bo-qh6" firstAttribute="top" secondItem="QDm-xD-5N3" secondAttribute="bottom" constant="17" id="3ht-P6-c9u"/>
+                            <constraint firstItem="QDm-xD-5N3" firstAttribute="top" secondItem="7KA-KF-lJ5" secondAttribute="bottom" constant="22" id="5qz-nq-YNy"/>
                             <constraint firstItem="Zyy-Te-jVX" firstAttribute="top" secondItem="RLc-KQ-Tiw" secondAttribute="bottom" constant="40" id="ETv-mn-v8p"/>
+                            <constraint firstItem="7KA-KF-lJ5" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="LDn-U0-yZy"/>
+                            <constraint firstItem="RLc-KQ-Tiw" firstAttribute="top" secondItem="nFY-bo-qh6" secondAttribute="bottom" constant="23" id="LsS-N6-1Yx"/>
+                            <constraint firstItem="QDm-xD-5N3" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="atv-5L-ZXu"/>
                             <constraint firstItem="RLc-KQ-Tiw" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="dZN-Pf-dIH"/>
                             <constraint firstItem="RLc-KQ-Tiw" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="gBm-kB-pta"/>
+                            <constraint firstItem="nFY-bo-qh6" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="jId-S4-Ee9"/>
                             <constraint firstItem="Zyy-Te-jVX" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="jSq-Y0-N3O"/>
                             <constraint firstItem="eZB-d4-PIj" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="mhV-AI-iT6"/>
                             <constraint firstItem="eZB-d4-PIj" firstAttribute="top" secondItem="RLc-KQ-Tiw" secondAttribute="bottom" constant="2" id="nni-hs-ACd"/>
@@ -49,8 +76,11 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
-                        <outlet property="myCountDown" destination="8bC-Xf-vdC" id="G4u-8i-CAj"/>
+                        <outlet property="firstNumber" destination="QDm-xD-5N3" id="Jkk-Xc-XMT"/>
+                        <outlet property="myCountDown" destination="Zyy-Te-jVX" id="tAk-ne-c2M"/>
                         <outlet property="myLabel" destination="RLc-KQ-Tiw" id="GvW-W1-I6Y"/>
+                        <outlet property="operationSwitch" destination="7KA-KF-lJ5" id="6Wc-bE-PuR"/>
+                        <outlet property="secondNumber" destination="nFY-bo-qh6" id="yHl-KY-pai"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
